--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="button-stack" role="navigation">
 
               <!-- Discord -->
-              <a class="button button-discord" href="https://discord.com/users/redplanks" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
+              <a class="button button-discord" href="https://discord.com/users/191402169084149760" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/discord.svg" alt="Discord Logo">Discord</a>
               <!-- X -->
               <a class="button button-x" href="https://x.com/redplanks_" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/x.svg" alt="X Logo">Twitter</a>
             </div>
